# tabarena

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  ruff.toml
bencheval/: pyproject.toml
tabflow_slurm/: AGENTS.md  BENCHMARK_LOG.md  README.md  benchmark_configs_feature_selection_benchmark_2026.yaml  pyproject.toml  run_setup_slurm_jobs.py  run_setup_slurm_jobs_fe_benchmark.py  run_setup_slurm_jobs_v2.py  run_setup_tabarena_v0pt1.py  run_tabarena_experiment.py  setup_slurm_base.py  setup_slurm_base_v2.py  setup_slurm_base_v3.py  slurm_run_data_feature_selection_benchmark_2026.json  submit_template.sh
tabflow_slurm/!old/: run_setup_slurm_jobs.py  run_setup_slurm_jobs_v2.py  run_setup_tabarena_v0pt1.py  setup_slurm_base_v2.py  submit_template.sh
tabflow_slurm/!old/benchmark_log/: benchmark_setups_history.py
tabflow_slurm/!old/benchmarking_setup/: download_all_foundation_models.py
tabflow_slurm/!old/simple_evaluation/: run_eval_for_new_model.py
tabflow_slurm/benchmark_log/: benchmark_setups_history.py  benchmark_setups_history_new.py
tabflow_slurm/benchmarking_setup/: download_all_foundation_models.py  download_data_foundry_datasets.py  download_feature_selection_datasets.py
tabflow_slurm/experiments/: run_eval.py  run_eval_beyondarena.py  run_setup_beyondarena.py  run_setup_tabarena_v0pt1.py
tabflow_slurm/simple_evaluation/: minimal_read_benchmark_results.py  run_eval_for_new_model.py
tabflow_slurm/tabflow_slurm/: __init__.py  run_tabarena_experiment.py  slurm_utils.py  submit_template.sh
(+904 files in other folders)
